# taskmanager

./: .gitignore  pyproject.toml
taskmanage/: db.sqlite3
taskmanage/taskmanage/: settings.py  urls.py
